# healthcare_app

./: .gitignore  README.md  main.py  patients.db  patients.txt  pyproject.toml  pytest.ini  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
api/: fhir_client.py
config/: config.yml  settings.py
export/: base.py  console_exporter.py  file_exporter.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_0534f16b066cb064_base_py.html  z_0534f16b066cb064_console_exporter_py.html  z_0534f16b066cb064_file_exporter_py.html  z_1c3fc9a536e91319_settings_py.html  z_1d2f357bd82148bd_patient_repository_py.html  z_1f4ff973ae144316_patient_parser_py.html  z_43ad90fd09052a05_patient_py.html  z_9e9676ba5bacd4a1_fhir_client_py.html  z_cd97a907892f3a2c___init___py.html  z_cd97a907892f3a2c_logger_py.html  z_fa0dbfc53b3f945f_patient_service_py.html
models/: patient.py
parser/: patient_parser.py
repository/: patient_repository.py
service/: patient_service.py
src/healthcare/: __init__.py
src/healthcare/api/: fhir_client.py
src/healthcare/config/: settings.py
src/healthcare/exporters/: base.py  console_exporter.py  file_exporter.py
src/healthcare/models/: patient.py
src/healthcare/parsers/: patient_parser.py
src/healthcare/repository/: patient_repository.py
src/healthcare/utils/: __init__.py  (+1 more)
tests/integration/: test_full_service_flow.py  test_patient_pipeline.py
tests/unit/: test_api_fhir_client.py  test_patient_model.py  test_patient_parser.py  test_patient_service.py
utils/: __init__.py  logger.py
(+1 files in other folders)
